# secp256k1-oxide-search

./: .gitignore  LICENSE  PLAN.md  README.md
docs/: SETUP.md
docs/adr/: 0001-scope-economics-nongoals.md  0003-alternative-gpu-methods.md  0004-orchestration-stochastic-allocation.md
docs/plans/: wave-plan.md
docs/research/: bandit-allocation.md  quantum-angle.md  wave-d-kangaroo-notes.md  wave2-oxide-notes.md  wave3-fastpath-notes.md  wave3-negmap-notes.md
kernels/cuda-ref/: Makefile  README.md  build.sh  hash.cuh  secp256k1_affine.cuh  secp256k1_ec.cuh  secp256k1_fast.cu  secp256k1_field.cuh  secp256k1_ref.cu  test_vectors.json
kernels/kangaroo/: adversarial.py  kangaroo.cu  kangaroo_negmap_ref.py  kangaroo_ref.py  kat16_0x1.json  kat16_0x2.json  kat16_0x3.json  kat20_0x1.json  kat20_0x2.json  kat20_0x3.json  kat24.json  kat24_0x2.json  kat24_0x3.json  kat28_0x1.json  kat28_0x2.json  kat28_0x3.json  kat28_0x4.json  kat28_0x5.json  kat32_0x1.json  kat32_0x2.json  kat32_0x3.json  kat32_0x4.json  kat32_0x5.json  kat32_0x6.json  kat32_0x7.json  kat32_0x8.json  kat32_0x9.json  kat36_0x1.json  kat36_0x2.json  kat36_0x3.json  kat36_0x4.json  kat36_0x5.json  kat36_0x6.json  kat36_0x7.json  kat36_0x8.json  kat36_0x9.json  kat40_0x1.json  kat40_0x10.json  (+41 more)
kernels/oxide-ec/: Cargo.toml
kernels/oxide-ec/src/: ec.rs  field.rs  hash.rs  main.rs
orchestrator/: README.md  __init__.py  bench_scaling.py  proto.py
results/: kangaroo_scaling.txt  wave1-cuda-keys-per-sec.csv  wave2-oxide-keys-per-sec.csv  wave3-fastpath.csv  wave4-scaling.csv
scripts/: kat_oracle.py
(+20 files in other folders)
